# experimental

./: CMakeLists.txt  FileStructure.h  TitleAkas.h  main.cpp
data/: cache.json
